--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,15 +2,37 @@
 
 {% block body_block %}
 
-<form class="form-horizontal" role="form" method="post" action=".">
-{% csrf_token %}
+    <form class="gp-form" role="form" method="post" action=".">
+        {% csrf_token %}
 
-<h2 class="">Please sign in</h2>
-<input class="form-control" placeholder="Username" id="id_username"name="username" type="text" required autofocus=""/>
+        <h1 class="gp-page-title">Please Log in</h1>
 
-    <input type="password" class="form-control" placeholder="Password" id="id_password" name="password"  required />
-
-        <button class="btn btn-primary" type="submit" value="Submit" >Sign in</button>
-</form>
+        <div class="form-group">
+            <label for="id_username">Your Username</label>
+            <input class="form-control" placeholder="Username" id="id_username" name="username" type="text" required
+                   autofocus=""/>
+        </div>
+        <div class="form-group">
+            <label for="id_username">Your Password</label>
+            <input type="password" class="form-control" placeholder="Password" id="id_username" name="password"
+                   required/>
+        </div>
+        <button class="btn btn-primary" type="submit" value="Submit">Sign in</button>
+    </form>
 
 {% endblock %}
+
+{#<form>#}
+{#    <div class="form-group">#}
+{#        <label for="email">Email address:</label>#}
+{#        <input type="email" class="form-control" id="email">#}
+{#    </div>#}
+{#    <div class="form-group">#}
+{#        <label for="pwd">Password:</label>#}
+{#        <input type="password" class="form-control" id="pwd">#}
+{#    </div>#}
+{#    <div class="checkbox">#}
+{#        <label><input type="checkbox"> Remember me</label>#}
+{#    </div>#}
+{#    <button type="submit" class="btn btn-default">Submit</button>#}
+{#</form>#}
