--- a/templates/app1/divs.html
+++ b/templates/app1/divs.html
@@ -1,12 +1,14 @@
 {% if divs %}
 
     <ul class="nav nav-sidebar">
-    {% for c in divs %}
-        <li><a href="{% url 'division_detail' c.slug %}">{{ c.title }}</a></li>
-        <hr>
-    {% endfor %}
-{% else %}
-    <li> <strong >There are no Division present.</strong></li>
+
+        {% for c in divs %}
+            <li><a href="{% url 'division_detail' c.slug %}">{{ c.title }}</a></li>
+        {% endfor %}
+
     </ul>
+{% else %}
+
+    <h1 class="gp-page-title">There are no Division present.</h1>
 
 {% endif %}
