--- a/templates/app1/story.html
+++ b/templates/app1/story.html
@@ -2,76 +2,66 @@
 
 {% block body_block %}
 
-    <a href="{% url 'story_share' division page %}"class="btn btn-primary">Share Your Tour Story</a>
+    <a href="{% url 'story_share' division page %}" class="btn btn-primary btn-block">Share Your Tour Story</a>
     {% if stories %}
 
-        <h3>Total {{ stories.count }} stories shared ! </h3><br>
-            {% for obj in stories %}
+        <h1 class="gp-page-title">Total {{ stories.count }} stories shared about {{ page }}!</h1>
 
-                <h3>{{ forloop.counter }}</h3>
-{#                <ul>#}
-{#                <li class="card-title">USER: {{ obj.user }}</li> <br>#}
-{#                <li  class="card-title">TITLE: {{ obj.title_name }}</li> <br>#}
-{#                <li class="card-title">Member: {{ obj.member }}</li> <br>#}
-                <li class="card-text">DESCRIPTION: {{ obj.des }}</li> <br>
-{#                </ul>#}
-                <table class="table table-bordered table-hover">
-                    <thead>
-                        <tr>
-                            <th>User Name</th>
-                            <th>Story-Title</th>
-                            <th>Number of member</th>
-                            {#  <th>Description</th> #}
-                        </tr>
-                    </thead>
-                    <tbody>
-                            <tr>
-                                <td>{{ obj.user }}</td>
-                                <td>{{ obj.title_name }}</td>
-                                <td>{{ obj.member }}</td>
-                                {# <td>{{ obj.des }}</td> #}
-                            </tr>
+        {% for obj in stories %}
 
-                    </tbody>
-                </table>
+            <div class="container gp-div-post-full">
 
-               {% if obj.stories.all.exists %}
-             <div class="card" style="width: 20rem;">
-                <div class="card-block">
-                <div class="container">
-                <br>
-                  <div id="myCarousel{{ forloop.counter }}" class="carousel slide" data-ride="carousel" style="width: 950px;">
-                    <!-- Wrapper for slides -->
+                <div class="gp-slide-show">
+                    {% if obj.stories.all.exists %}
+                        <div id="myCarousel{{ forloop.counter }}" class="carousel slide gp-carousel"
+                             data-ride="carousel">
+                            <!-- Wrapper for slides -->
 
-                    <div  class="carousel-inner" role="listbox">
+                            <div class="carousel-inner" role="listbox">
 
-                        {% for obj2 in  obj.stories.all %}
-                         <div class="item {% if forloop.first %}active{% endif %}">
-                             <img class="card-img-top" src="{{ obj2.file.url }}" alt="IMAGE GOES HERE",width="400" height="345">
-                         </div>
-                        {% endfor %}
+                                {% for obj2 in  obj.stories.all %}
+                                    <div class="item {% if forloop.first %}active{% endif %}">
+                                        <img class="card-img-top gp-card-img" src="{{ obj2.file.url }}"
+                                             alt="IMAGE GOES HERE">
+                                    </div>
+                                {% endfor %}
 
-                    </div>
-                    <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#myCarousel{{ forloop.counter }}" role="button" data-slide="prev">
-                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#myCarousel{{ forloop.counter }}" role="button" data-slide="next">
-                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
-            </div>
+                            </div>
+                            <!-- Left and right controls -->
+                            <a class="left carousel-control" id="gp-carousel-control"
+                               href="#myCarousel{{ forloop.counter }}"
+                               role="button"
+                               data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" id="gp-carousel-control"
+                               href="#myCarousel{{ forloop.counter }}"
+                               role="button"
+                               data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    {% else %}
+                        <p class="gp-post-no-image-text">No images shared by <strong>{{ user.username }}</strong>.</p>
+                    {% endif %}
+
                 </div>
-        </div>
-        {% else %}
-            <h3>No images Shared by the {{ user.username }} </h3>
-               {% endif %}
 
+                <div class="gp-desc">
+                    <h4 class="card-title">{{ obj.title_name }}</h4>
+                    <p class="card-text-author">Shared by <strong>{{ obj.user }}</strong></p>
+                    <p class="card-text-member">It was {{ obj.member }} member tour.</p>
+                    <p class="card-text">{{ obj.des }}</p>
+                </div>
 
-          <hr>
+            </div>
+
         {% endfor %}
+
+        <a href="{% url 'story_share' division page %}" class="btn btn-primary btn-block">Share Your Tour Story</a>
+
     {% else %}
         <h3>Sorry no stories Shared yet!</h3>
     {% endif %}
