--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -2,38 +2,31 @@
 
 
 {% block body_block %}
-    <h2 class="form-signin-heading">Sign Up Here</h2>
-        <form role="form" method="post" action=".">
-                    {% csrf_token %}
-                    <div class="form-group" >
-                    <p class="required"><label class="required" for="id_username">
-                    Username:</label>
-                    <input class="form-control" id="id_username" maxlength="30"
-                    name="username" type="text" />
-                    <span class="helptext">
-                    Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only.
-                    </span>
-                    </p>
-                    <p class="required"><label class="required" for="id_email">
-                    E-mail:</label>
-                    <input class="form-control" id="id_email" name="email"
-                    type="email" />
-                    </p>
-                    <p class="required"><label class="required" for="id_password1">
-                    Password:</label>
-                    <input class="form-control" id="id_password1" name="password1"
-                    type="password" />
-                    </p>
-                    <p class="required">
-                    <label class="required" for="id_password2">
-                    Password confirmation:</label>
-                    <input class="form-control" id="id_password2" name="password2"
-                    type="password" />
-                    <span class="helptext">
-                    Enter the same password as before, for verification.
-                    </span>
-                    </p>
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+    <form class="gp-form" role="form" method="post" action=".">
+        {% csrf_token %}
+
+        <h1 class="gp-page-title">Sign Up Here</h1>
+
+        <div class="form-group">
+            <p class="required"><label class="required" for="id_username">
+                Username:</label>
+                <input class="form-control" id="id_username" maxlength="30" name="username" type="text"/>
+                <span class="help-block">Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only.</span>
+            </p>
+            <p class="required">
+                <label class="required" for="id_email">E-mail:</label>
+                <input class="form-control" id="id_email" name="email" type="email"/>
+            </p>
+            <p class="required"><label class="required" for="id_password1">
+                Password:</label>
+                <input class="form-control" id="id_password1" name="password1" type="password"/>
+            </p>
+            <p class="required">
+                <label class="required" for="id_password2">Password confirmation:</label>
+                <input class="form-control" id="id_password2" name="password2" type="password"/>
+                <span class="help-block">Enter the same password as before, for verification.</span>
+            </p>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
 {% endblock %}
