--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,9 +2,25 @@
 {% load i18n %}
 
 {% block body_block %}
-    <form method="post" action=".">
+    <form class="gp-form" role="form" method="post" action=".">
         {% csrf_token %}
-        {{ form.as_p }}
+
+        <p><label for="id_old_password">Old password:</label> <input autofocus="" id="id_old_password"
+                                                                     name="old_password" type="password"
+                                                                     required=""></p>
+        <p><label for="id_new_password1">New password:</label> <input id="id_new_password1" name="new_password1"
+                                                                      type="password" required=""> <span
+                class="helptext"></span></p>
+        <ul>
+            <li>Your password can't be too similar to your other personal information.</li>
+            <li>Your password must contain at least 8 characters.</li>
+            <li>Your password can't be a commonly used password.</li>
+            <li>Your password can't be entirely numeric.</li>
+        </ul>
+        <p></p>
+        <p><label for="id_new_password2">New password confirmation:</label> <input id="id_new_password2"
+                                                                                   name="new_password2"
+                                                                                   type="password" required=""></p>
 
         <input type="submit" value="{% trans 'Submit' %}"/>
     </form>
