--- a/templates/app1/story.html
+++ b/templates/app1/story.html
@@ -49,12 +49,12 @@
 
                 <div class="gp-desc">
                     <h4 class="card-title">{{ obj.title_name }}</h4>
-                    <p class="card-text-author">Shared by <strong>{{ obj.user }}</strong></p>
+                    <p class="card-text-author">Shared by <strong><a href="{% url 'user_profile' obj.user %}">{{ obj.user }}</a></strong></p>
                     <p class="card-text-member"><strong>Number of Member: </strong> {{ obj.member }}</p>
 
                     <button type="button" id="likes" data-id="{{ obj.id }}"
-                            class="btn btn-mini btn-danger glyphicon glyphicon-heart" value="Like">
-                         {% if obj.total_likes > 0 %}{{ obj.total_likes }} {% endif %}
+                            class="btn btn-mini {% if obj.id in like_list %} btn-danger {% endif %} glyphicon glyphicon-heart" value="Like">
+                        {% if obj.total_likes > 0 %}{{ obj.total_likes }} {% endif %}
 
                     </button>
                     People Liked this.
@@ -73,23 +73,29 @@
         <h3>Sorry no stories Shared yet!</h3>
     {% endif %}
 
-<script>
-    $('button').on('click', function (event) {
-        event.preventDefault();
-        var element = $(this);
-        $.ajax({
-            url: '/app1/like',
-            type: 'GET',
-            data: {obj_id: element.attr("data-id")},
-            dataType: "json",
-            success: function (response) {
-               // element.removeClass('btn btn-mini btn-danger glyphicon glyphicon-heart-empty').addClass('btn btn-mini btn-danger glyphicon glyphicon-heart');
+    <script>
+        $('button').on('click', function (event) {
+            event.preventDefault();
+            var element = $(this);
+            $.ajax({
+                url: '/app1/like',
+                type: 'GET',
+                data: {obj_id: element.attr("data-id")},
+                dataType: "json",
+                success: function (response) {
+                    // element.removeClass('btn btn-mini btn-danger glyphicon glyphicon-heart-empty').addClass('btn btn-mini btn-danger glyphicon glyphicon-heart');
 
-                element.html(' '+ response);
-            }
+                    if (response.isLiked == true) {
+                        element.addClass("btn-danger");
+                    } else {
+                        element.removeClass("btn-danger");
+                    }
+
+                    element.html(' ' + response.totalLikes);
+                }
+            });
         });
-    });
-</script>
+    </script>
 
 
 
