--- a/static/app1/CSS/style.css
+++ b/static/app1/CSS/style.css
@@ -72,6 +72,10 @@ h1, h2, h3, h4, h5, h6 {
  * All about post
  */
 
+.comment {
+    margin: 20px 0px 20px 20px;
+}
+
 div.gp-div-post-summery, div.gp-div-post-full {
     padding: 0;
     margin: 10px auto;
@@ -174,6 +178,10 @@ div.gp-div-post-summery, div.gp-div-post-full {
     text-align: center;
     border-top: 2px solid #eee;
 }
+
+
+
+
 
 /**
  * Style for big screens ;)
