--- a/templates/app1/image_upload.html
+++ b/templates/app1/image_upload.html
@@ -16,6 +16,7 @@
             </div>
         {% endfor %}
         <button class="btn btn-primary" type="submit" name="submit">Add Image</button>
+         <a href="{% url 'index'%}" class="btn btn-primary">Done</a>
     </form>
 
     {% if story_obj.stories %}
