--- a/templates/app1/story.html
+++ b/templates/app1/story.html
@@ -43,7 +43,7 @@
                             </a>
                         </div>
                     {% else %}
-                        <p class="gp-post-no-image-text">No images shared by <strong>{{ user.username }}</strong>.</p>
+                        <p class="gp-post-no-image-text">No images shared by <strong>{{ obj.user }}</strong></p>
                     {% endif %}
                 </div>
 
