--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -70,7 +70,7 @@
                         </ul>
                     </li>
                     <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
-                    <li><a href="http://127.0.0.1:8000/admin/">{{ user.username }}</a></li>
+                    <li><a href="{% url 'user_profile' user %}">{{ user.username }}</a></li>
                     <li><a href="{% url 'auth_logout' %}?next=/app1/">Logout</a></li>
 
                 {% else %}
